# ImageLib

./: .gitignore  CMakeLists.txt  Image.cpp  Image.h  Matrix.cpp  Matrix.h  README.md  conanfile.txt  core.cpp  core.h  main.cpp  util.cpp  util.h
include/: Matrix.hpp  core.hpp  util.hpp
src/: Image.cpp  core.cpp  util.cpp
